--- a/project3.0/css/style.css
+++ b/project3.0/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --font-main: 'Heebo' , sans-serif;
-    --font-style: var(--font-style);
-    --font-weight: var(--font-weight);
+    --font-main: 'Heebo', sans-serif;
+    --color-primary: #21243D;
+    --color-secondary: #000000;
 }
 
 .header {
@@ -11,8 +11,8 @@
 .header-wrapper {
     display: flex;
     justify-content: flex-end;
-    padding-left: 60px;
-    padding-right: 60px;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .header-wrapper ul {
@@ -33,9 +33,9 @@
 
 .header-wrapper a {
     text-decoration: none;
-    color: #000000;
+    color: var(--color-secondary);
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 29px;
@@ -44,7 +44,7 @@
 
 .section-info {
     display: block;
-    padding-top: 140px;
+    margin-top: 140px;
 }
 
 .container {
@@ -55,6 +55,8 @@
 
 .container-fluid {
     max-width: 1152px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section-info-wrapper {
@@ -64,27 +66,27 @@
 }
 
 
-.section-info-wrapper h1 {
+.info-left h1 {
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 700;
     font-size: 44px;
     line-height: 60px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
-.section-info-wrapper p {
+.info-left p {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
-.section-info-wrapper button {
+.info-left button {
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 29px;
@@ -123,11 +125,11 @@
     margin-top: 0;
     margin-bottom: 0;
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 22px;
     line-height: 60px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .post-title a {
@@ -135,8 +137,8 @@
     padding: 24px 0px 24px 0px;
     text-decoration: none;
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #00A8CC;
@@ -152,40 +154,40 @@
 
 .single-post h2 {
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 38px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .single-post-date {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 26px;
-    color: #21243D;
+    color: var(--color-primary);
     position: relative;
     max-width: fit-content;
 }
 
 .single-post p {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .title-works h2 {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 22px;
     line-height: 60px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .works-list-item {
@@ -200,11 +202,11 @@
 
 .works h2 {
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 700;
     font-size: 30px;
     line-height: 44px;
-    color: #21243D;
+    color: var(--color-primary);
     margin-top: 0px;
     text-align: inherit;
     margin-bottom: 0px;
@@ -223,7 +225,7 @@
     border-radius: 16px;
     max-width: fit-content;
     font-family: var(--font-main);
-    font-style: var(--font-style);
+    font-style: normal;
     font-weight: 900;
     font-size: 18px;
     line-height: 60px;
@@ -232,8 +234,8 @@
 
 .works-type {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 20px;
     line-height: 29px;
     color: #8695A4;
@@ -243,11 +245,11 @@
 
 .works p {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .footer-social {
@@ -265,11 +267,11 @@
 
 .footer-copyright p {
     font-family: var(--font-main);
-    font-style: var(--font-style);
-    font-weight: var(--font-weight);
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-    color: #21243D;
+    color: var(--color-primary);
 }
 
 .line-v {
@@ -289,4 +291,174 @@
     background-color: #E0E0E0;
     vertical-align: middle;
     margin: 31px 0px 31px 0px;
+}
+
+@media (max-width: 992px) {
+    .header-wrapper {
+        margin-left: 35px;
+        margin-right: 35px;
+    }
+
+    .container {
+        margin-left: 35px;
+        margin-right: 35px;
+    }
+
+    .post-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-left h1 {
+        text-align: center;
+    }
+
+    .info-left p {
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        margin-left: 13px;
+        margin-right: 13px;
+    }
+
+    .header-wrapper {
+        margin-top: 20px;
+        margin-left: 12px;
+        margin-right: 12px;
+    }
+
+    .header-wrapper ul {}
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 50px;
+        right: 10px;
+        width: 200px;
+        border-radius: 5px;
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: opacity 0.7s ease, transform 0.7s ease;
+        pointer-events: none;
+    }
+
+    .menu li {
+        padding: 10px;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    .menu li:active {
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    .hamburger {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        width: 30px;
+        height: 25px;
+        justify-content: space-between;
+        margin: 10px;
+    }
+
+    .hamburger div {
+        width: 100%;
+        height: 1px;
+        background-color: black;
+        transition: all 0.3s ease;
+    }
+
+    .hamburger.active div:nth-child(1) {
+        transform: rotate(45deg) translate(8px, 8px);
+    }
+
+    .hamburger.active div:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active div:nth-child(3) {
+        transform: rotate(-45deg) translate(8px, -8px);
+    }
+
+    .menu.active {
+        gap: 0px;
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
+    }
+
+    .section-info {
+        margin-top: 20px;
+        transition: margin-top 0.3s ease;
+    }
+
+    .section-info.shifted {
+        margin-top: 180px;
+        /* Высота меню */
+    }
+
+    .section-info-wrapper {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 34px;
+    }
+
+    .works-list-item {
+        flex-direction: column;
+    }
+
+    .info-left h1 {
+        margin-top: 0px;
+        margin-bottom: 21px;
+    }
+
+    .info-left p {
+        margin-bottom: 27px;
+    }
+
+    .info-left-button {
+        display: flex;
+        justify-content: center;
+    }
+
+    .section-posts {
+        margin-top: 58px;
+    }
+
+    .single-post {
+        max-width: fit-content;
+        max-height: fit-content;
+    }
+
+    .single-post:nth-child(1) {
+        margin-top: 0;
+    }
+
+    .post-title {
+        justify-content: center;
+    }
+
+    .post-title a {
+        display: none;
+    }
+
+    .title-works h2 {
+        text-align: center;
+        margin: 0px;
+    }
+
+    .works-img {
+        margin: 0px;
+    }
+
+    .works-img img {
+        width: 100%;
+        height: auto;
+    }
 }
