--- a/project3.0/css/style.css
+++ b/project3.0/css/style.css
@@ -2,6 +2,7 @@
     --font-main: 'Heebo', sans-serif;
     --color-primary: #21243D;
     --color-secondary: #000000;
+    --color-tertiary: #8695A4;
 }
 
 .header {
@@ -39,6 +40,10 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 29px;
+}
+
+.header-wrapper a:active {
+    color: #FF6464;
 }
 
 
@@ -376,8 +381,6 @@
         margin-right: 12px;
     }
 
-    .header-wrapper ul {}
-
     .menu {
         display: flex;
         flex-direction: column;
@@ -507,5 +510,89 @@
     .works-img img {
         width: 100%;
         height: auto;
+    }
+}
+
+/* Blog page */
+.blog-container {
+    max-width: 683px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.title-blog h1 {
+    font-family: var(--font-main);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 60px;
+    color: var(--color-primary);
+}
+
+.blog {
+    display: flex;
+    flex-direction: column;
+}
+
+.blog a {
+    text-decoration: none;
+    font-family: var(--font-main);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 44px;
+    color: var(--color-primary);
+}
+
+.blog a:hover {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.blog-time {
+    display: ruby;
+}
+
+.blog-time h5 {
+    font-family: var(--font-main);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 29px;
+    color: var(--color-primary);
+    margin: 16px 20px 16px 0px;
+}
+
+.blog-time h3 {
+    font-family: var(--font-main);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 29px;
+    color: var(--color-tertiary);
+    margin: 16px 0px 16px 20px;
+}
+
+.blog-time span {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.blog p {
+    font-family: var(--font-main);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--color-primary);
+    margin: 0px;
+}
+
+@media (max-width: 768px) {
+    .section-blog {
+        transition: margin-top 0.3s ease;
+    }
+
+    .section-blog.shifted {
+        margin-top: 180px;
     }
 }
