--- a/Crypto landing page copy/css/style.css
+++ b/Crypto landing page copy/css/style.css
@@ -987,3 +987,9 @@ font-size: 16px;
 line-height: 24px;
 color: #FFFFFF;
 }
+
+.footer-item2-right-block {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
