--- a/Crypto landing page copy/css/style.css
+++ b/Crypto landing page copy/css/style.css
@@ -142,6 +142,7 @@ table {
 
 body {
     background-color: #12132A;
+    overflow-x: hidden;
 }
 
 /* Header */
@@ -360,6 +361,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    counter-reset: cat 0;
 }
 
 .section3-item {
@@ -368,6 +370,20 @@ body {
     flex-direction: column;
     border: 1px solid #C23893;
     border-radius: 10px;
+
+}
+
+.section3-item::before {
+    content: "0" counter(cat);
+    counter-increment: cat;
+    margin-top: 28px;
+    margin-left: 34px;
+    font-family: var(--font-secondary);
+    font-style: normal;
+    font-weight: 300;
+    font-size: 32px;
+    color: #FFFFFF;
+    
 }
 
 .section3-item img {
@@ -375,7 +391,7 @@ body {
     margin-right: auto;
 }
 
-.section3-item h1 {
+.section3-item4 h1 {
     margin-top: 28px;
     margin-left: 34px;
     font-family: var(--font-secondary);
