--- a/Crypto/css/style.css
+++ b/Crypto/css/style.css
@@ -152,7 +152,7 @@ body {
 }
 
 .container {
-    max-width: 1280px;
+    max-width: 1305px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -854,14 +854,97 @@ body {
 
 .section8-item2-photo {
     display: flex;
-    justify-content: center;
-    gap: 60px;
+    justify-content: space-between;
 }
 
-.section8-item2-photo img {
-    border-radius: 24px;
-    max-width: 379px;
+.section8-photo-container {
+    position: relative;
+    max-width: 380px;
+}
+
+.section8-photo-container img {
+    max-width: 380px;
+    width: 100%;
     height: auto;
+    border-radius: 24px;
+}
+
+.section8-photo-container::after {
+    content: "";
+    position: absolute;
+    top: 411px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.8;
+    border-radius: 24px;
+    max-height: 268px;
+    
+}
+
+.section8-photo-content {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    justify-content: space-between;
+    z-index: 1;
+    top: 92%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 0px 38px 28px 38px;
+
+}
+
+.section8-photo-title {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.section8-photo-title h2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 21.6069px;
+    line-height: 29px;
+    align-items: center;
+    letter-spacing: -0.600191px;
+    color: #FFFFFF;
+}
+
+.section8-photo-title h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16.8053px;
+    line-height: 26px;
+    color: #D4D4D8;
+}
+
+.section8-icon-container {
+    display: block;
+    position: relative;
+    max-width: 70px;
+    max-height: 70px;
+}
+
+.section8-icon-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    border-radius: 50px;
+    z-index: 1;
+}
+
+.section8-icon-container img {
+    display: block;
+    position: relative;
+    z-index: 2;
 }
 
 .section8-item2-ellipse img {
@@ -932,6 +1015,7 @@ body {
     display: block;
     max-width: 1305px;
     height: auto;
+    width: 100%;
 }
 
 /* Footer */
