--- a/Crypto/css/style.css
+++ b/Crypto/css/style.css
@@ -187,6 +187,7 @@ body {
 .right-block ul {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     gap: 30px;
     list-style-type: none;
     text-decoration: none;
@@ -220,6 +221,86 @@ body {
     .container {
         max-width: 80%;
     }
+
+    .header-wrapper {
+        align-items: flex-start;
+        margin-top: 24px;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 50px;
+        right: 10px;
+        width: 200px;
+        border-radius: 5px;
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: opacity 0.7s ease, transform 0.7s ease;
+        pointer-events: none;
+    }
+
+    .menu li {
+        padding: 10px;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    .menu li:active {
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    }
+
+    .right-block ul {
+        gap: 0;
+    }
+
+    .right-block-hamburger {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        width: 30px;
+        height: 25px;
+        justify-content: space-between;
+        margin: 10px;
+        transition: margin 0.3s ease;
+    }
+
+    .right-block-hamburger.active {
+        margin-bottom: 180px;
+    }
+
+    .right-block-hamburger div {
+        width: 100%;
+        border-top: 1px solid #fcfbfb;
+        transition: all 0.3s ease;
+    }
+
+    .right-block-hamburger.active div:nth-child(1) {
+        transform: rotate(45deg) translate(8px, 8px);
+    }
+
+    .right-block-hamburger.active div:nth-child(2) {
+        opacity: 0;
+    }
+
+    .right-block-hamburger.active div:nth-child(3) {
+        transform: rotate(-45deg) translate(9px, -9px);
+    }
+
+    .menu.active {
+        gap: 0px;
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
+        margin-top: 38px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    
 }
 
 /* Section 1 */
@@ -334,6 +415,37 @@ body {
     .container-fluid {
         flex-direction: column;
     }
+    
+    .elips {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .elips h1::before {
+        top: -65px;
+        right: 35px;
+    }
+
+    .elips h1 {
+        font-size: 70px;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .elips p {
+        text-align: center;
+    }
+    
+    .section1-img {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 80%;
+    }
+    
+    .section1-bottom {
+        justify-content: center;
+    }
+    
 }
 
 @media (max-width: 768px) {
@@ -344,31 +456,6 @@ body {
     .elips h1 {
         font-size: 50px;
     }
-}
-
-.elips {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.elips h1 {
-    font-size: 70px;
-    justify-content: center;
-    text-align: center;
-}
-
-.elips p {
-    text-align: center;
-}
-
-.section1-img {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 80%;
-}
-
-.section1-bottom {
-    justify-content: center;
 }
 
 /* Sectiion 2 */
@@ -662,8 +749,7 @@ body {
 }
 
 .section5-item-left {
-    display: flex;
-    flex-direction: column;
+    display:block;
     max-width: 603px;
 }
 
@@ -736,14 +822,15 @@ body {
         max-width: 100%;
     }
 
-    .section5-item-left h2,
-    p {
+    .section5-item-left h2,p {
         text-align: center;
     }
 
     .section5-item-left a {
+        display: block;
         margin-left: auto;
         margin-right: auto;
+        max-width: fit-content;
     }
 
     .section5-item-right {
